--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
             <h3 class="display-3">It's <em>your</em> BCA bus.</h3>
             <p>Enough with having to constantly refresh MyBCABus. Enough with staring at your phone, wondering when your BCA bus will arrive. Say hello to the future of BCA bussing.</p>
             <div class="cta-container">
-              <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta<sup>*</sup></a>
+              <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta</a>
               <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
               <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
             </div>
-            <div class="text-white-50"><small>* not all features are available in the beta</small></div>
           </div>
           <div class="col-md-4 h-100 overflow-hidden d-md-flex justify-content-md-center align-items-md-center align-items-lg-start p-3">
             <img class="d-block w-100 mx-auto" src="/images/iphone-xs.png" />
@@ -59,11 +58,10 @@
       <div class="container">
         <h3 class="display-4">Download YourBCABus today.</h3>
         <div class="cta-container">
-          <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta<sup>*</sup></a>
+          <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta</a>
           <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
           <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
         </div>
-        <div class="text-muted"><small>* not all features are available in the beta</small></div>
       </div>
     </div>
   </body>
