--- a/support/privacy.html
+++ b/support/privacy.html
@@ -40,6 +40,7 @@
       </ul>
       <p>We only use this information to monitor server health and do not ever attempt to sell this information or associate it with you. Unfortunately, there is no way to opt out, since collection of this data is nearly universal among apps.</p>
       <p>We also collect which buses you star through Firebase Cloud Messaging; this is so that we can keep track of which buses to send notifications for. To opt out, tap <strong>Don't Enable</strong> when asked to set up bus arrival notifications. If you have already enabled them, tap <strong>Settings</strong> on the YourBCABus, and make sure <strong>Bus Arrival</strong> Notifications are switched off.</p>
+      <p>We may also collect the stops you suggest to us through the Custom Stops feature. This collection only happens if you consent by tapping <strong>Submit stop</strong>. We will use this anonymized data to expand our stop database to cover more buses.</p>
       <p>Keep in mind that we may change this Privacy Policy at any time in response to new features; however, if this does happen, we will notify you and give you a chance to respond before collecting any new data.</p>
       <p>If at any point you feel that we are violating this Privacy Policy, please <a href="/support">let us know</a>.</p>
     </div>
