--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         <div class="row h-100">
           <div class="col h-md-100 d-flex flex-column justify-content-center align-items-center align-items-md-start text-white text-center text-md-left mr-md-5">
             <h3 class="display-3">It's <em>your</em> BCA bus.</h3>
+            <p><strong>iOS app available now.</strong></p>
             <p>Enough with having to constantly refresh MyBCABus. Enough with staring at your phone, wondering when your BCA bus will arrive. Say hello to the future of BCA bussing.</p>
             <div class="cta-container">
-              <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta</a>
+              <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
               <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
               <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
             </div>
@@ -58,7 +59,7 @@
       <div class="container">
         <h3 class="display-4">Download YourBCABus today.</h3>
         <div class="cta-container">
-          <a href="https://testflight.apple.com/join/jetSfWRx" class="btn btn-primary mb-1">iOS Beta</a>
+          <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
           <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
           <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
         </div>
