--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
   <body>
     <div class="hero-header gradient-background w-100">
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="/">
-          <img src="/images/logo.png" width="40" />
-          YourBCABus
-        </a>
+        <a class="navbar-brand" href="https://yourbcabus.com"><img src="/images/logo.png" width="40" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+            <li class="nav-item active"><a class="nav-link" href="/">About</a></li>
             <li class="nav-item"><a class="nav-link" href="/support">Support</a></li>
           </ul>
         </div>
