--- a/support/privacy.html
+++ b/support/privacy.html
@@ -14,7 +14,7 @@
   <body class="bg-light">
     <div class="gradient-background w-100 pb-4">
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="https://yourbcabus.com">
           <img src="/images/logo.png" width="40" />
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,6 +22,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="/">About</a></li>
             <li class="nav-item"><a class="nav-link" href="/support">Support</a></li>
           </ul>
         </div>
