--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Enough with having to constantly refresh MyBCABus. Enough with staring at your phone, wondering when your BCA bus will arrive. Say hello to the future of BCA bussing.</p>
             <div class="cta-container">
               <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
-              <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
+              <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
               <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
             </div>
           </div>
@@ -58,7 +58,7 @@
         <h3 class="display-4">Download YourBCABus today.</h3>
         <div class="cta-container">
           <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
-          <button class="btn btn-secondary mb-1" disabled>Web App - Dec 2018</button>
+          <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
           <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
         </div>
       </div>
