--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="cta-container">
               <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
               <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
-              <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
+              <button class="btn btn-secondary mb-1" disabled>Android App - Late Feb</button>
             </div>
           </div>
           <div class="col-md-4 h-100 overflow-hidden d-md-flex justify-content-md-center align-items-md-center align-items-lg-start p-3">
@@ -59,7 +59,7 @@
         <div class="cta-container">
           <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
           <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
-          <button class="btn btn-secondary mb-1" disabled>Android App - Jan 2019</button>
+          <button class="btn btn-secondary mb-1" disabled>Android App - Late Feb</button>
         </div>
       </div>
     </div>
