--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row h-100">
           <div class="col h-md-100 d-flex flex-column justify-content-center align-items-center align-items-md-start text-white text-center text-md-left mr-md-5">
             <h3 class="display-3">It's <em>your</em> BCA bus.</h3>
-            <p><strong>iOS app available now.</strong></p>
+            <p><strong>Android beta available now.</strong></p>
             <p>Enough with having to constantly refresh MyBCABus. Enough with staring at your phone, wondering when your BCA bus will arrive. Say hello to the future of BCA bussing.</p>
             <div class="cta-container">
               <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
