Add page on bus statuses

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <p><strong>Android beta available now.</strong></p>
             <p>Enough with having to constantly refresh MyBCABus. Enough with staring at your phone, wondering when your BCA bus will arrive. Say hello to the future of BCA bussing.</p>
             <div class="cta-container">
-              <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
-              <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
-              <a href="https://play.google.com/apps/testing/com.yourbcabus.android.yourbcabus" class="btn btn-primary mb-1">Android App</a>
+              <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-primary mb-1">iOS App</a>
+              <a href="https://yourbcabus.com" class="btn btn-info mb-1">Web App</a>
+              <a href="https://play.google.com/apps/testing/com.yourbcabus.android.yourbcabus" class="btn btn-success mb-1">Android Beta</a>
             </div>
           </div>
           <div class="col-md-4 h-100 overflow-hidden d-md-flex justify-content-md-center align-items-md-center align-items-lg-start p-3">
@@ -51,15 +51,16 @@
         <li>Find your bus in the BCA parking lot</li>
         <li>Wake up in time with "Get Off" alerts</li>
         <li>Learn which bus to take and when your stop comes <em class="text-secondary">(only on select buses)</em></li>
+        <li><span class="badge badge-primary">New!</span> Get predictions on when your bus will arrive at BCA</li>
       </ul>
     </div>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h3 class="display-4">Download YourBCABus today.</h3>
         <div class="cta-container">
-          <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-dark mb-1">iOS App</a>
-          <a href="https://yourbcabus.com" class="btn btn-primary mb-1">Web App</a>
-          <a href="https://play.google.com/apps/testing/com.yourbcabus.android.yourbcabus" class="btn btn-primary mb-1">Android App</a>
+          <a href="https://itunes.apple.com/us/app/yourbcabus/id1443414640" class="btn btn-primary mb-1">iOS App</a>
+          <a href="https://yourbcabus.com" class="btn btn-info mb-1">Web App</a>
+          <a href="https://play.google.com/apps/testing/com.yourbcabus.android.yourbcabus" class="btn btn-success mb-1">Android App</a>
         </div>
       </div>
     </div>
