--- a/support/index.html
+++ b/support/index.html
@@ -31,6 +31,12 @@
       <p class="lead w-100 text-center">Need help with YourBCABus? You've come to the right place.</p>
     </div>
     <div class="container px-3 py-5">
+      <div class="rounded shadow p-3 mb-5">
+        <h3>Support Articles</h3>
+        <ul class="mb-0">
+          <li><a href="/support/busstatus.html">About Bus Statuses and Predictions</a></li>
+        </ul>
+      </div>
       <div class="gradient-background rounded shadow p-3 mb-3">
         <h3><i class="fas fa-comments"></i> Want to leave feedback?</h3>
         <p class="mb-0">Send us feedback on <a class="text-warning" href="https://docs.google.com/forms/d/e/1FAIpQLSdBWh7iPxjJJPGSEFsv8jozpVGHm0SwAmAs1FtsZLrdGAYD2g/viewform?usp=sf_link">our Google Form</a>.</p>
