Add progressive bus dismissal times

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <li>Find your bus in the BCA parking lot</li>
         <li>Wake up in time with "Get Off" alerts</li>
         <li>Learn which bus to take and when your stop comes <em class="text-secondary">(only on select buses)</em></li>
-        <li><span class="badge badge-primary">New!</span> Get predictions on when your bus will arrive at BCA</li>
+        <li>Get predictions on when your bus will arrive at BCA</li>
+        <li><span class="badge badge-primary">New!</span> View progressive bus dismissal times</li>
       </ul>
     </div>
     <div class="jumbotron jumbotron-fluid">
