--- a/support/privacy.html
+++ b/support/privacy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - YourBCABus</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.typekit.net/qjo5whp.css">
     <link rel="stylesheet" href="/style.css" />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -46,5 +47,6 @@
       <p><strong>Regarding location data:</strong> Location data (used for "Get Off" alerts) is never stored on-device, let alone sent to our servers. Upon arrival at your stop, we may send a request to our server to confirm whether to push a "Get Off" alert, but your personal data will not be in this request.</p>
       <p>If at any point you feel that we are violating this Privacy Policy, please <a href="/support">let us know</a>.</p>
     </div>
+    <script src="/script.js" async></script>
   </body>
 </html>
