Use Neue Haas Grotesk

--- a/support/busstatus.html
+++ b/support/busstatus.html
@@ -16,7 +16,7 @@
     <div class="gradient-background w-100">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="https://yourbcabus.com">
-          <img src="/images/logo.png" width="40" />
+          <img src="/images/logo.png" width="40" /> <span class="align-middle" style="font-weight: 600;">YourBCABus</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
@@ -55,6 +55,5 @@
         <p class="font-italic mb-0">(It should be fine for deciding whether to hang out in the breezeway for a few minutes though.)</p>
       </div>
     </div>
-    <script src="/script.js" async></script>
   </body>
 </html>
