--- a/support/index.html
+++ b/support/index.html
@@ -16,7 +16,7 @@
     <div class="gradient-background w-100 pb-4">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="https://yourbcabus.com">
-          <img src="/images/logo.png" width="40" />
+          <img src="/images/logo.png" width="40" /> <span class="align-middle" style="font-weight: 600;">YourBCABus</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
@@ -58,6 +58,5 @@
         <p class="mb-0">You can find our <a href="/support/privacy.html">Privacy Policy</a> here.</p>
       </div>
     </div>
-    <script src="/script.js" async></script>
   </body>
 </html>
