--- a/support/privacy.html
+++ b/support/privacy.html
@@ -16,7 +16,7 @@
     <div class="gradient-background w-100 pb-4">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="https://yourbcabus.com">
-          <img src="/images/logo.png" width="40" />
+          <img src="/images/logo.png" width="40" /> <span class="align-middle" style="font-weight: 600;">YourBCABus</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fas fa-bars"></i>
@@ -47,6 +47,5 @@
       <p><strong>Regarding location data:</strong> Location data (used for "Get Off" alerts) is never stored on-device, let alone sent to our servers. Upon arrival at your stop, we may send a request to our server to confirm whether to push a "Get Off" alert, but your personal data will not be in this request.</p>
       <p>If at any point you feel that we are violating this Privacy Policy, please <a href="/support">let us know</a>.</p>
     </div>
-    <script src="/script.js" async></script>
   </body>
 </html>
